apps/pocket-id/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocket-id
  namespace: pocket-id
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-http-to-https-redirect@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - id.emc2.build
      secretName: id-emc2-build-letsencrypt-tls
  rules:
    - host: id.emc2.build
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocket-id
                port:
                  number: 80
